--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/server/server.csproj"
+                "${workspaceFolder}/server.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
